# jokull-sunna-rsvp

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  package-lock.json  package.json  postcss.config.js  pyproject.toml  render.yaml  rollup.config.js  shell.py  svelte.config.cjs  tailwind.config.cjs  tailwind.config.js
.svelte/output/: manifest.json
.svelte/output/client/_app/: error.svelte-3d07235c.js  start-6d5dc625.js
.svelte/output/client/_app/chunks/: vendor-57fbb124.js
.svelte/output/client/_app/pages/: $layout.svelte-040c1e8e.js  responses.svelte-75c9e814.js
.svelte/output/server/: app.js
api/: __init__.py  choices.py  config.py  database.py  endpoints.py  models.py  proxy.py  schemas.py
src/: app.html  global.pcss  template.html
src/components/: FoodPreference.svelte  Form.svelte  Guest.svelte  Response.svelte  TextInput.svelte
src/routes/: $layout.svelte  index.svelte  responses.svelte
