[tool.poetry]
name = "jokull-sunna-rsvp"
version = "0.1.0"
description = ""
authors = ["Jökull Sólberg Auðunsson <jokull@solberg.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
asgiproxy = "^0.0"
SQLAlchemy = "^1.3.22"
aiofiles = "^0.6.0"
sqlalchemy = "^1.4.0"
importlib-metadata = "^3.7.3"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"
black = "^20.8b1"
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
