[tool.poetry]
name = "jokull-sunna-rsvp"
version = "0.1.0"
description = ""
authors = ["Jökull Sólberg Auðunsson <jokull@solberg.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
asgiproxy = "^0.0"
aiofiles = "^0.6.0"
importlib-metadata = "^3.7.3"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.11"

[tool.poetry.dev-dependencies]
SQLAlchemy = {version = "^1.4.11", extras = ["mypy"]}
sqlalchemy2-stubs = {git = "https://github.com/sqlalchemy/sqlalchemy2-stubs.git"}
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
